# DisplayLiveCameraFeed

./: .gitignore  CMakeLists.txt  README.md
DisplayLiveCameraFeedApp/: CMakeLists.txt
DisplayLiveCameraFeedApp/src/: DisplayCameraFeed.cpp
src/: DisplayCameraFeed.cpp  a.out
